--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        python: [ '3.6', '3.7' ]
+        python: [ '3.6', '3.7', '3.8' ]
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python
@@ -82,7 +82,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python: [ '3.6', '3.7' ]
+        python: [ '3.6', '3.7', '3.8' ]
         arch: ['x64', 'x86']
     steps:
     - uses: actions/checkout@v1
