Use windows syntax.

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -80,6 +80,8 @@ jobs:
 
   windows_wheels:
     runs-on: windows-latest
+    env:
+      FLYCAP_VERSION: "2.13.3.61"
     strategy:
       matrix:
         python: [ '3.7', '3.8', '3.9', '3.10' ]
@@ -102,13 +104,12 @@ jobs:
     - name: Get dependencies
       env:
         ZIP_PASS: ${{ secrets.ZIP_PASS }}
-        FLYCAP_VERSION: "2.13.3.61"
       run: |
-        Invoke-WebRequest "https://github.com/matham/pyflycap2/releases/download/v0.1.0/FlyCapture_${env:FLYCAP_VERSION}_${{ matrix.arch }}.7z" -OutFile "flycap.7z"
+        Invoke-WebRequest "https://github.com/matham/pyflycap2/releases/download/v0.1.0/FlyCapture_$env:FLYCAP_VERSION`_${{ matrix.arch }}.7z" -OutFile "flycap.7z"
         7z x -oflycap -p"${env:ZIP_PASS}" "flycap.7z"
         cd flycap
-        .\FlyCapture_${env:FLYCAP_VERSION}_${{ matrix.arch }}.exe /ExtractCab /nosplash /q
-        7z x SupportFiles/FlyCapture_${env:FLYCAP_VERSION}_${{ matrix.arch }}.msi
+        .\FlyCapture_$env:FLYCAP_VERSION`_${{ matrix.arch }}.exe /ExtractCab /nosplash /q
+        7z x SupportFiles/FlyCapture_$env:FLYCAP_VERSION`_${{ matrix.arch }}.msi
         mv vcredist_crt_v140.msvcp140.dll msvcp140.dll
 
     - name: Make wheel
