--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -108,9 +108,11 @@ jobs:
         Invoke-WebRequest "https://github.com/matham/pyflycap2/releases/download/v0.1.0/FlyCapture_$env:FLYCAP_VERSION`_${{ matrix.arch }}.7z" -OutFile "flycap.7z"
         7z x -oflycap -p"${env:ZIP_PASS}" "flycap.7z"
         cd flycap
-        Start-Process powershell.exe -ArgumentList "cd '${pwd}';.\FlyCapture_${env:FLYCAP_VERSION}_${{ matrix.arch }}.exe /ExtractCab /nosplash /q" -Verb runAs
+        Set-PSDebug -Trace 2
+        & .\FlyCapture_${env:FLYCAP_VERSION}_${{ matrix.arch }}.exe /ExtractCab /nosplash /q
         7z x SupportFiles/FlyCapture_$env:FLYCAP_VERSION`_${{ matrix.arch }}.msi
         mv vcredist_crt_v140.msvcp140.dll msvcp140.dll
+        Set-PSDebug -Trace 0
 
     - name: Make wheel
       run: |
