--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -108,12 +108,9 @@ jobs:
         Invoke-WebRequest "https://github.com/matham/pyflycap2/releases/download/v0.1.0/FlyCapture_$env:FLYCAP_VERSION`_${{ matrix.arch }}.7z" -OutFile "flycap.7z"
         7z x -oflycap -p"${env:ZIP_PASS}" "flycap.7z"
         cd flycap
-        Set-PSDebug -Trace 2
-        $exe = "$pwd\FlyCapture_$env:FLYCAP_VERSION`_${{ matrix.arch }}.exe"
-        & $exe /ExtractCab /nosplash /q | Out-Null
+        & "$pwd\FlyCapture_$env:FLYCAP_VERSION`_${{ matrix.arch }}.exe" /ExtractCab /nosplash /q | Out-Null
         7z x SupportFiles/FlyCapture_$env:FLYCAP_VERSION`_${{ matrix.arch }}.msi
         mv vcredist_crt_v140.msvcp140.dll msvcp140.dll
-        Set-PSDebug -Trace 0
 
     - name: Make wheel
       run: |
@@ -121,6 +118,7 @@ jobs:
         $env:PYFLYCAP2_LIB = "${pwd}/flycap"
         $env:PYFLYCAP2_WHEEL_DEPS = "${pwd}/flycap"
 
+        python -m pip install build
         python -m build --wheel
 
     - name: Upload wheel
