--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -20,7 +20,7 @@ jobs:
         FLYCAP_VERSION: "2.13.3.31"
       run: |
         sudo apt update
-        sudo apt -y install libraw1394-11 libavcodec57 libavformat57 libswscale4 libswresample2 libavutil55
+        sudo apt -y install libraw1394-11
         sudo apt -y install libgtkmm-2.4-1v5 libglademm-2.4-1v5 libgtkglextmm-x11-1.2-0v5 libgtkmm-2.4-dev
         sudo apt -y install libglademm-2.4-dev libgtkglextmm-x11-1.2-dev libusb-1.0-0 curl p7zip-full patchelf
 
@@ -32,28 +32,27 @@ jobs:
         cd flycapture2-$FLYCAP_VERSION-amd64
         sudo dpkg -i libflycapture-2*
         sudo dpkg -i libflycapturegui-2*
-        sudo dpkg -i libflycapturevideo-2*
         sudo dpkg -i libflycapture-c-2*
         sudo dpkg -i libflycapturegui-c-2*
-        sudo dpkg -i libflycapturevideo-c-2*
-        sudo dpkg -i libmultisync-2*
-        sudo dpkg -i libmultisync-c-2*
-        sudo dpkg -i flycap-2*
-        sudo dpkg -i flycapture-doc-2*
-        sudo dpkg -i updatorgui*
 
     - name: Make wheel
       run: |
-        python3 -m pip install --upgrade sphinx sphinx-rtd-theme build auditwheel
+        python3 -m pip install --upgrade sphinx sphinx-rtd-theme build
         python3 -m build --wheel .
-        auditwheel repair --plat manylinux_2_27_x86_64 dist/*.whl -w dist/
-        rm dist/*-linux_x86_64*
 
     - name: Upload wheel
       uses: actions/upload-artifact@v2
       with:
         name: py_wheel
         path: dist
+
+    - name: Upload to GitHub Release
+      uses: softprops/action-gh-release@v0.1.14
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        files: dist/*
 
     - name: Generate docs
       if: github.ref == 'refs/heads/master' && matrix.python == '3.10'
@@ -110,9 +109,16 @@ jobs:
         python -m pip install build
         python -m build --sdist
 
+    - uses: actions/cache@v2
+      id: get-deps
+      with:
+        path: flycap/
+        key: pyflycap-win-${{ env.FLYCAP_VERSION }}-${{ matrix.arch }}-0
+
     - name: Get dependencies
       env:
         ZIP_PASS: ${{ secrets.ZIP_PASS }}
+      if: steps.get-deps.outputs.cache-hit != 'true'
       run: |
         Invoke-WebRequest "https://github.com/matham/pyflycap2/releases/download/v0.1.0/FlyCapture_$env:FLYCAP_VERSION`_${{ matrix.arch }}.7z" -OutFile "flycap.7z"
         7z x -oflycap -p"${env:ZIP_PASS}" "flycap.7z"
@@ -135,3 +141,20 @@ jobs:
       with:
         name: py_wheel
         path: dist
+
+    - name: Upload to GitHub Release
+      uses: softprops/action-gh-release@v0.1.14
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        files: dist/*
+
+    - name: Publish to PyPI
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        TWINE_USERNAME: "__token__"
+        TWINE_PASSWORD: ${{ secrets.pypi_password }}
+      run: |
+        python -m pip install twine
+        twine upload dist/*
